--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,26 @@
+body {
+  width: 90%;
+  margin: auto;
+}
+
+.nav-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  margin: 20px auto;
+}
+.nav-bar div {
+  width: 100%;
+}
 .main__title {
   text-align: center;
   margin-bottom: 30px;
+  font-size: 50px;
+  font-weight: 600;
+}
+.author__title {
+  text-align: right;
+  font-size: 20px;
 }
 .exercise__row {
   margin-bottom: 20px;
