--- a/css/02.css
+++ b/css/02.css
@@ -3,7 +3,7 @@ html {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
-  font-family: "helvetica neue";
+  font-family: "Titillium Web", sans-serif;
   text-align: center;
   font-size: 10px;
 }
