--- a/css/01.css
+++ b/css/01.css
@@ -6,7 +6,7 @@ body,
 html {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: "Titillium Web", sans-serif;
 }
 .keys__container {
   width: 70%;
