--- a/css/03.css
+++ b/css/03.css
@@ -20,7 +20,7 @@ body {
   text-align: center;
   background: #193549;
   color: white;
-  font-family: "helvetica neue", sans-serif;
+  font-family: "Titillium Web", sans-serif;
   font-weight: 100;
   font-size: 30px;
 }
