--- a/css/01.css
+++ b/css/01.css
@@ -7,6 +7,7 @@ html {
   margin: 0;
   padding: 0;
   font-family: "Titillium Web", sans-serif;
+  box-sizing: border-box;
 }
 .keys__container {
   width: 70%;
@@ -17,21 +18,28 @@ html {
   justify-content: center;
 }
 .keys {
-  width: 100%;
-  display: grid;
-  grid-template-columns: repeat(9, 1fr);
-  grid-gap: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
 .key {
+  width: 100px;
+  height: 100px;
   border: 5px solid black;
   border-radius: 5px;
   background-color: rgba(0, 0, 0, 0.6);
   text-align: center;
   display: flex;
   flex-direction: column;
-  padding: 20px 5px;
+  justify-content: center;
+  align-items: center;
   text-shadow: 0 0 0.5rem black;
   transition: all 0.07s ease;
+  margin-bottom: 10px;
+}
+.key:not(:last-child) {
+  margin-right: 10px;
 }
 .playing {
   transform: scale(1.1);
@@ -47,4 +55,20 @@ kbd {
   color: #ffc600;
   text-transform: uppercase;
   letter-spacing: 0.1rem;
+}
+
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) {
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+}
+
+/* Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
 }
