--- a/css/05.css
+++ b/css/05.css
@@ -28,8 +28,7 @@ body {
   font-size: 20px;
   background-size: cover;
   background-position: center;
-  transition: font-size 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11),
-    flex 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11);
+  transition: font-size 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11), flex 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11);
 }
 
 .panel1 {
