--- a/css/06.css
+++ b/css/06.css
@@ -1,7 +1,7 @@
 html {
   box-sizing: border-box;
   background: #ffc600;
-  font-family: "Titillium Web", sans-serif;
+  font-family: "helvetica neue";
   font-size: 20px;
   font-weight: 200;
 }
@@ -66,6 +66,7 @@ input.search {
   transform: perspective(100px) rotateX(-3deg) translateY(3px);
   background: linear-gradient(to top, #ffffff 0%, #efefef 100%);
 }
+
 span.population {
   font-size: 15px;
 }
